# adventofcode2023

./: .gitignore  README.md
aoc/src/day/: Main.java
aoc/src/day1/: Main.java
aoc/src/day10/: Main.java
aoc/src/day10/classes/: Pipe.java
aoc/src/day2/: Day2.java
aoc/src/day2/classes/: Game.java  Set.java
aoc/src/day3/: Main.java
aoc/src/day3/classes/: Schematic.java
aoc/src/day4/: Main.java
aoc/src/day4/classes/: Card.java
aoc/src/day5/: Main.java
aoc/src/day5/classes/: Category.java  Mapping.java  Range.java
aoc/src/day6/: Main.java
aoc/src/day7/: Main.java
aoc/src/day7/classes/: Card.java  Hand.java
aoc/src/day8/: Main.java
aoc/src/day8/classes/: Node.java
aoc/src/day9/: Main.java
day1/: Main.java
haskell/: aoc.cabal
haskell/day1/: day1.cabal
haskell/day1/app/: Main.hs
haskell/day1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/src/: Main.hs
haskell/src/day1/: Day01.hs
haskell/src/day2/: Day02.hs
