cabal-version:      2.4
name:               adventofcode2023
version:            0.1.0.0

extra-source-files: CHANGELOG.md

executable adventofcode2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Day01
                      Day02

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0,
                      split,
                      MissingH,
                      containers,
    hs-source-dirs:   src
                      src/day1
                      src/day2
    default-language: Haskell2010
